// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto3";

option java_package = "org.sonar.process.systeminfo.protobuf";
option java_outer_classname = "ProtobufSystemInfo";

option optimize_for = SPEED;

message SystemInfo {
  repeated Section sections = 1;
}

message Section {
  string name = 1;
  repeated Attribute attributes = 2;
}

message Attribute {
  string key = 1;
  oneof value {
    bool boolean_value = 2;
    int64 long_value = 3;
    double double_value = 4;
    string string_value = 5;
  }
  repeated string string_values = 6;
}
